<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ucsb.cs.cs185.jjkaddoura.unitytoolbar.CalendarFragment">
        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minDate="@string/minDate"
            android:maxDate="@string/maxDate"
            android:id="@+id/Calender"></CalendarView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:textColor="@color/Black"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:textSize="@dimen/header"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/EventList"
            android:divider="@android:color/transparent"
            android:dividerHeight="20sp">
        </ListView>
</LinearLayout>
